# dialog-sentry

./: LICENSE  pyproject.toml
dialog_sentry/: plugin.py
