[tool.poetry]
name = "dialog-sentry"
version = "0.1.0"
description = "Sentry plugin for talkdai/dialog"
authors = ["Walison Filipe <walisonfilipe@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.8"
sentry-sdk = "^1.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins.dialog]
sentry = 'dialog_sentry.plugin'